--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,98 @@
-.App {
-  text-align: center;
+#tree-container {
+	position: absolute;
+	width: 90%;
+	border: 1px solid black;
+	margin: 10px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.svgContainer {
+	display: block;
+    margin: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.node {
+	cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.node-rect {
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.node-rect-closed {
+	stroke-width: 2px;
+	stroke: rgb(0,0,0);
+}
+
+.link {
+	fill: none;
+	stroke: lightsteelblue;
+	stroke-width: 2px;
+}
+
+.linkselected {
+	fill: none;
+	stroke: tomato;
+	stroke-width: 2px;
+}
+
+.arrow {
+	fill: lightsteelblue;
+	stroke-width: 1px;
+}
+
+.arrowselected {
+	fill: tomato;
+	stroke-width: 2px;
+}
+
+.link text {
+	font: 7px sans-serif;
+	fill: #CC0000;
+}
+
+.wordwrap {
+	white-space: pre-wrap; /* CSS3 */
+	white-space: -moz-pre-wrap; /* Firefox */
+	white-space: -pre-wrap; /* Opera <7 */
+	white-space: -o-pre-wrap; /* Opera 7 */
+	word-wrap: break-word; /* IE */
+}
+
+.node-text {
+	font: 7px sans-serif;
+	color: white;
+}
+
+.tooltip-text-container {
+    height: 100%;
+	width: 100%;
+}
+
+.tooltip-text {
+	visibility: hidden;
+	font: 7px sans-serif;
+	color: white;
+	display: block;
+ 	padding: 5px;
+}
+
+.tooltip-box {
+	background: rgba(0, 0, 0, 0.7);
+	visibility: hidden;
+	position: absolute;
+	border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    border-top-right-radius: 0.5em;
+}
+
+p {
+	display: inline;
+}
+
+.textcolored {
+	color: orange;
+}
+
+a.exchangeName {
+	color: orange;
 }
