--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 #tree-container {
 	position: absolute;
-	cursor: grab;
-	cursor: -webkit-grab;
+	/* cursor: grab;
+	cursor: -webkit-grab; */
 	width: 100%;
 	border: 1px solid black;
 }
 
 #tree-container .svgContainer {
 	width: 100%;
+	height: 100%;
 	padding: 5px;
 }
 
